<resources>
    <string name="app_name">Paycash</string>
    <string name="next">Next</string>
    <string name="getStarted">Get Started</string>
    <string name="tvSkip">Skip</string>
    <string name="textview">TextView</string>
    <string name="title_activity_main_fragment">MainFragment</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="Report">Report</string>
    <string name="sign_up">Already Have Account ? Sign In Now!</string>
    <string name="btn_register">Register</string>
    <string name="tvPass">Password</string>
    <string name="tvEmail">Email</string>
    <string name="tvUname">Username</string>
    <string name="Profile">Profile</string>
    <string name="Pembayaran">Pilih Methode Pembayaran</string>
    <string name="transfer">Transfer Bank</string>
    <string name="Chat">Chat</string>
    <string name="News">News</string>
    <string name="tvButton">Lebih Banyak</string>
    <string name="popular">Popular</string>
    <string name="finance">finacne</string>
    <string name="title_news">News</string>
    <string name="title_report">Report</string>
    <string name="login">Login</string>
    <string name="finances">Finance</string>
    <string name="date">Date</string>
    <string name="Sources">Sources</string>
    <string name="sent">Sent</string>
    <string name="school_payment">School Payment</string>
    <string name="in_04_00_am_13_july">In 04.00 AM, 13 July</string>
    <string name="januari">Januari</string>
    <string name="februari">Februari</string>
    <string name="LANJUT">lanjut</string>
    <string name="Notification">Riwayat</string>
    <string name="beranda">Beranda</string>
    <string name="Inbox">Inbox</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="maret">Maret</string>
    <string name="april">April</string>
    <string name="mei">Mei</string>
    <string name="juni">Juni</string>
    <string name="juli">Juli</string>
    <string name="agustus">Agustus</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account ? Sign Up !</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="when">When</string>
    <string name="datetime">23 Jan 2020</string>
    <string name="school">School</string>
    <string name="smk_negeri_4">SMK Negeri 4</string>
    <string name="_12_aug_10_am">12 Aug, 10 AM</string>
    <string name="sekolah">Sekolah</string>
    <string name="bayaran">Jenis Pembayaran</string>
    <string name="scan_qr">Scan QR</string>
    <string name="scan">Scan QR mu ke merchant sekolah</string>
    <string name="todo">TODO</string>
    <string name="tidak_ada_transaksi_tertunda">Tidak Ada Transaksi Tertunda</string>
    <string name="jan">Januari</string>
    <string name="feb">Februari</string>
    <string name="mar">Maret</string>
    <string name="des">Desember</string>
    <string name="sep">September</string>
    <string name="jul">Juli</string>
    <string name="jun" />
    <string name="ags">Agustus</string>
    <string name="nov">November</string>
    <string name="okt">Oktober</string>
    <string name="apr">April</string>
    <string name="kotak_masuk">Kotak Masuk</string>
    <string name="bottom_sheet_peek">Bottom Dragabble</string>
    <string name="bottom_sheet_content">Bottom Content</string>
    <string name="uang">Rp 120,000</string>
    <string name="explore">Explore</string>
    <string name="view_all">View All</string>
    <string name="date_inbox">30 Jan 2020 08.14</string>
    <string name="description">Description</string>
    <string name="Pengaturan">Pengaturan</string>
    <string name="Notifications">Notifikasi</string>
    <string name="logout">Keluar</string>
    <string name="isi">Mau isi berapa hari ini?</string>
    <string name="tranaction_secure">All your transaction are secure and fast</string>
    <string name="top_up">Top Up</string>
    <string name="pay_now">Pay Now</string>
    <string name="desc_no_internet">Please check your connection status and try again</string>
    <string name="username">Username</string>
    <string name="tvName">Name</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="simpan_data">Simpan</string>

</resources>
