<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardViewheadline"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:clickable="true"
        android:layout_margin="10dp"
        android:foreground="?android:selectableItemBackground"
        app:cardElevation="20dp"
        app:cardCornerRadius="4dp"
        android:padding="10dp">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="200dp">

            <ProgressBar
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:id="@+id/loader"/>

            <ImageView
                android:id="@+id/imageHeadline"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/img3"
                android:layout_width="match_parent"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/gradient"/>

            <TextView
                android:id="@+id/titleHeadline"
                android:layout_height="wrap_content"
                android:textColor="@color/whiteTextColor"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:textSize="20dp"
                android:layout_width="wrap_content"
                android:text="@string/title_home"/>

            <LinearLayout
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_gravity="bottom"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/tvSourceHeadline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:layout_marginBottom="@dimen/_10sdp"
                    android:layout_marginLeft="12dp"
                    android:textColor="@color/whiteTextColor"
                    android:ems="15"
                    android:textSize="13dp"
                    android:text="@string/Sources"/>

                <TextView
                    android:id="@+id/tvDateHeadline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="right"
                    android:layout_marginRight="@dimen/_7sdp"
                    android:textColor="@color/whiteTextColor"
                    android:text="@string/date"/>

            </LinearLayout>
        </FrameLayout>







    </androidx.cardview.widget.CardView>

</LinearLayout>