<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView_details_news"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="6dp"
                app:cardElevation="2dp">


                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="200dp">

                    <ProgressBar
                        android:id="@+id/loader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center" />


                    <ImageView
                        android:id="@+id/image_details"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scaleType="centerCrop"
                        android:src="@drawable/img3" />

                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:background="@drawable/gradient" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:orientation="horizontal"
                        android:padding="@dimen/_10sdp">

                        <TextView
                            android:id="@+id/tvSourceHeadline_details"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="12dp"
                            android:layout_marginBottom="@dimen/_10sdp"
                            android:ems="15"
                            android:gravity="left"
                            android:text="@string/Sources"
                            android:textColor="@color/whiteTextColor"
                            android:textSize="13dp" />

                        <TextView
                            android:id="@+id/tvDateHeadline_details"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="@dimen/_7sdp"
                            android:gravity="right"
                            android:text="@string/date"
                            android:textColor="@color/whiteTextColor" />

                    </LinearLayout>
                </FrameLayout>


            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/titleHeadline_details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginTop="10dp"
                android:text="@string/title_home"
                android:textColor="@color/black"
                android:textSize="20dp" />


            <TextView
                android:id="@+id/tv_desc_details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:text="@string/description"
                android:textSize="@dimen/_15sdp" />

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="10dp"
                app:cardElevation="15dp">

                <ProgressBar
                    android:id="@+id/webview_loader"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center" />

                <WebView
                    android:id="@+id/webView_detail_news"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" />


            </androidx.cardview.widget.CardView>
        </LinearLayout>

    </ScrollView>


</LinearLayout>